objects/myV2MOM__Measure__c.object
<CustomObject>
    <fields>
        <fullName>myV2MOM__Assigned_Current_Value__c</fullName>
        <label>Assigned Current Value</label>
        <summarizedField>myV2MOM__Measure_Team__c.myV2MOM__Current_Value__c</summarizedField>
        <summaryForeignKey>myV2MOM__Measure_Team__c.myV2MOM__Measure__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>myV2MOM__Comments__c</fullName>
        <label>Comments</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>myV2MOM__Completion_By_Date__c</fullName>
        <label>Completion By Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>myV2MOM__Completion_By_Quarter__c</fullName>
        <label>Completion By Quarter</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Q1</fullName>
                </value>
                <value>
                    <fullName>Q2</fullName>
                </value>
                <value>
                    <fullName>Q3</fullName>
                </value>
                <value>
                    <fullName>Q4</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>myV2MOM__Current_Value__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Current Value</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>myV2MOM__MeasureChatFeedId__c</fullName>
        <label>MeasureChatFeedId</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>myV2MOM__Measure_Team_Member_Count__c</fullName>
        <label>Measure Team Member Count</label>
        <summaryFilterItems>
            <field>myV2MOM__Measure_Team__c.myV2MOM__Type__c</field>
            <operation>equals</operation>
            <value>Assigned</value>
        </summaryFilterItems>
        <summaryForeignKey>myV2MOM__Measure_Team__c.myV2MOM__Measure__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>myV2MOM__Method__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Method</label>
        <referenceTo>myV2MOM__Method__c</referenceTo>
        <relationshipLabel>Measures</relationshipLabel>
        <relationshipName>Measures</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>myV2MOM__Obstacles__c</fullName>
        <label>Obstacles</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>myV2MOM__Priority__c</fullName>
        <label>Priority</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>High</fullName>
                </value>
                <value>
                    <fullName>Medium</fullName>
                </value>
                <value>
                    <fullName>Low</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>myV2MOM__Q1_Completion__c</fullName>
        <formula>myV2MOM__Q1__c/myV2MOM__Q1_Target__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Q1 Completion</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>myV2MOM__Q1_Target__c</fullName>
        <label>Q1 Target</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>myV2MOM__Q1__c</fullName>
        <label>Q1</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>myV2MOM__Q2_Completion__c</fullName>
        <formula>myV2MOM__Q2__c/myV2MOM__Q2_Target__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Q2 Completion</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>myV2MOM__Q2_Target__c</fullName>
        <label>Q2 Target</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>myV2MOM__Q2__c</fullName>
        <label>Q2</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>myV2MOM__Q3_Completion__c</fullName>
        <formula>myV2MOM__Q3__c/myV2MOM__Q3_Target__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Q3 Completion</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>myV2MOM__Q3_Target__c</fullName>
        <label>Q3 Target</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>myV2MOM__Q3__c</fullName>
        <label>Q3</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>myV2MOM__Split_By_Quarter__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Split By Quarter</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>myV2MOM__Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>On Track</fullName>
                </value>
                <value>
                    <fullName>Not Started</fullName>
                </value>
                <value>
                    <fullName>Behind Schedule</fullName>
                </value>
                <value>
                    <fullName>On Hold</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>myV2MOM__Target_Value__c</fullName>
        <label>Target Value</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>myV2MOM__Total_Current_Value__c</fullName>
        <formula>myV2MOM__Assigned_Current_Value__c +  myV2MOM__Current_Value__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Current Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>myV2MOM__Track_Progress_By__c</fullName>
        <label>Track Progress By</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Completion Status</fullName>
                </value>
                <value>
                    <fullName>Numbers Completed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Measure</label>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>myV2MOM__All</fullName>
        <columns>NAME</columns>
        <columns>myV2MOM__Status__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>myV2MOM__Assigned_Current_Value__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Measure Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Measures</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>